# audio-craft-py

./: .env.example  .flake8  .gitignore  IMPROVEMENTS_SUMMARY.md  README.md  example_model_override.py  main.py  memory-bank.md  pyproject.toml  requirements.txt  run_all_tests.py  setup.py  test_example.py  test_multi_speaker.py  test_voice_options.py
.github/workflows/: publish.yml
audio_api/: __init__.py  config.py  logging_config.py
audio_api/models/: __init__.py  audio_request.py
audio_api/services/: __init__.py  queue_service.py  tts_service.py  worker_service.py
docs/: README.md  configuration.md  example_improved_usage.py  example_model_override.py  quick-start.md
docs/api/: voice-names.md
docs/examples/: basic-usage.md  multi-language.md  voice-options.md
docs/tutorials/: voice-assistant.md
tests/: test_languages.py  test_multi_speaker.py  test_tts_service.py  test_voice_options.py  test_worker_service_dependency_injection.py
